--- a/embeddings/mainwindow.ui
+++ b/embeddings/mainwindow.ui
@@ -23,10 +23,10 @@
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
-      <x>-10</x>
-      <y>0</y>
+      <x>0</x>
+      <y>20</y>
       <width>800</width>
-      <height>480</height>
+      <height>541</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -53,7 +53,7 @@ rgb(0, 0, 0)
 }</string>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="Start">
      <widget class="QLabel" name="label">
@@ -830,7 +830,7 @@ rgb(0, 0, 0)
         </property>
        </widget>
       </item>
-      <item row="22" column="0" alignment="">
+      <item row="22" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>A</string>
@@ -1714,14 +1714,160 @@ rgb(0, 0, 0)
      <widget class="QLabel" name="label_21">
       <property name="geometry">
        <rect>
-        <x>320</x>
-        <y>200</y>
-        <width>49</width>
-        <height>16</height>
+        <x>10</x>
+        <y>10</y>
+        <width>191</width>
+        <height>81</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(17, 255, 0);
+font: 20pt &quot;Sitka&quot;;</string>
+      </property>
       <property name="text">
-       <string>Settings</string>
+       <string>SETTINGS</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_23">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>70</y>
+        <width>451</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 0, 0);
+font: 15pt &quot;Snap ITC&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Wizard Game Difficulty</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>140</y>
+        <width>141</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 255, 225);
+font: 12pt &quot;Showcard Gothic&quot;;
+</string>
+      </property>
+      <property name="text">
+       <string>Easy Level</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>210</y>
+        <width>231</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 255, 225);
+font: 12pt &quot;Showcard Gothic&quot;;
+</string>
+      </property>
+      <property name="text">
+       <string>Intermediate Level</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton_3">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>350</y>
+        <width>311</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 255, 225);
+font: 12pt &quot;Showcard Gothic&quot;;
+</string>
+      </property>
+      <property name="text">
+       <string>&quot;I Was Once A Knight&quot; Level</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton_4">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>280</y>
+        <width>151</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 255, 225);
+font: 12pt &quot;Showcard Gothic&quot;;
+</string>
+      </property>
+      <property name="text">
+       <string>Hard Level</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_24">
+      <property name="geometry">
+       <rect>
+        <x>490</x>
+        <y>70</y>
+        <width>211</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 0, 0);
+font: 15pt &quot;Snap ITC&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Command Type</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton_5">
+      <property name="geometry">
+       <rect>
+        <x>490</x>
+        <y>210</y>
+        <width>201</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 255, 225);
+font: 12pt &quot;Showcard Gothic&quot;;
+</string>
+      </property>
+      <property name="text">
+       <string>Touch Command</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="radioButton_6">
+      <property name="geometry">
+       <rect>
+        <x>490</x>
+        <y>140</y>
+        <width>301</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 255, 225);
+font: 12pt &quot;Showcard Gothic&quot;;
+</string>
+      </property>
+      <property name="text">
+       <string>Voice Command (Default)</string>
       </property>
      </widget>
     </widget>
