--- a/embeddings/mainwindow.ui
+++ b/embeddings/mainwindow.ui
@@ -84,7 +84,7 @@ rgb(0, 0, 0)
        </rect>
       </property>
       <property name="text">
-       <string>Next Page!</string>
+       <string>Settings</string>
       </property>
      </widget>
     </widget>
@@ -1728,147 +1728,172 @@ font: 20pt &quot;Sitka&quot;;</string>
        <string>SETTINGS</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_23">
+     <widget class="QPushButton" name="pushButton_18">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>70</y>
-        <width>451</width>
-        <height>81</height>
+        <x>690</x>
+        <y>390</y>
+        <width>83</width>
+        <height>29</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(26, 255, 0);
+font: 900 12pt &quot;Segoe UI Black&quot;;</string>
+      </property>
+      <property name="text">
+       <string>SAVE</string>
+      </property>
+     </widget>
+     <widget class="QGroupBox" name="groupBox">
+      <property name="geometry">
+       <rect>
+        <x>460</x>
+        <y>90</y>
+        <width>311</width>
+        <height>281</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">color: rgb(255, 0, 0);
-font: 15pt &quot;Snap ITC&quot;;</string>
+font: 15pt &quot;Snap ITC&quot;;
+</string>
       </property>
-      <property name="text">
+      <property name="title">
+       <string>Command Buttons</string>
+      </property>
+      <widget class="QRadioButton" name="radioButton_6">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>90</y>
+         <width>301</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(0, 255, 225);
+font: 12pt &quot;Showcard Gothic&quot;;
+</string>
+       </property>
+       <property name="text">
+        <string>Voice Command (Default)</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton_5">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>180</y>
+         <width>211</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(0, 255, 225);
+font: 12pt &quot;Showcard Gothic&quot;;
+</string>
+       </property>
+       <property name="text">
+        <string>Touch Command</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="groupBox_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>90</y>
+        <width>351</width>
+        <height>331</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 0, 0);
+font: 15pt &quot;Snap ITC&quot;;
+</string>
+      </property>
+      <property name="title">
        <string>Wizard Game Difficulty</string>
       </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>140</y>
-        <width>141</width>
-        <height>26</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 255, 225);
+      <widget class="QRadioButton" name="radioButton">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>40</y>
+         <width>141</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(0, 255, 225);
 font: 12pt &quot;Showcard Gothic&quot;;
 </string>
-      </property>
-      <property name="text">
-       <string>Easy Level</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton_2">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>210</y>
-        <width>231</width>
-        <height>26</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 255, 225);
+       </property>
+       <property name="text">
+        <string>Easy Level</string>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton_2">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>120</y>
+         <width>341</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(0, 255, 225);
 font: 12pt &quot;Showcard Gothic&quot;;
 </string>
-      </property>
-      <property name="text">
-       <string>Intermediate Level</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton_3">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>350</y>
-        <width>311</width>
-        <height>26</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 255, 225);
+       </property>
+       <property name="text">
+        <string>Intermediate Level (Default)</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton_4">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>200</y>
+         <width>151</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(0, 255, 225);
 font: 12pt &quot;Showcard Gothic&quot;;
 </string>
-      </property>
-      <property name="text">
-       <string>&quot;I Was Once A Knight&quot; Level</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton_4">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>280</y>
-        <width>151</width>
-        <height>26</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 255, 225);
+       </property>
+       <property name="text">
+        <string>Hard Level</string>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton_3">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>280</y>
+         <width>311</width>
+         <height>26</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(0, 255, 225);
 font: 12pt &quot;Showcard Gothic&quot;;
 </string>
-      </property>
-      <property name="text">
-       <string>Hard Level</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_24">
-      <property name="geometry">
-       <rect>
-        <x>490</x>
-        <y>70</y>
-        <width>211</width>
-        <height>81</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(255, 0, 0);
-font: 15pt &quot;Snap ITC&quot;;</string>
-      </property>
-      <property name="text">
-       <string>Command Type</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton_5">
-      <property name="geometry">
-       <rect>
-        <x>490</x>
-        <y>210</y>
-        <width>201</width>
-        <height>26</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 255, 225);
-font: 12pt &quot;Showcard Gothic&quot;;
-</string>
-      </property>
-      <property name="text">
-       <string>Touch Command</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton_6">
-      <property name="geometry">
-       <rect>
-        <x>490</x>
-        <y>140</y>
-        <width>301</width>
-        <height>26</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 255, 225);
-font: 12pt &quot;Showcard Gothic&quot;;
-</string>
-      </property>
-      <property name="text">
-       <string>Voice Command (Default)</string>
-      </property>
+       </property>
+       <property name="text">
+        <string>&quot;I Was Once A Knight&quot; Level</string>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="About">
