--- a/embeddings/mainwindow.ui
+++ b/embeddings/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>825</width>
-    <height>498</height>
+    <width>800</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
-      <x>-10</x>
+      <x>0</x>
       <y>0</y>
       <width>800</width>
       <height>480</height>
@@ -58,10 +58,7 @@
 rgb(0, 0, 0)
 }</string>
     </property>
-    <property name="currentIndex">
-     <number>2</number>
-    </property>
-    <widget class="QWidget" name="Start">
+    <widget class="QWidget" name="page">
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
@@ -94,37 +91,8 @@ rgb(0, 0, 0)
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="House">
-     <widget class="QLabel" name="label_20">
-      <property name="geometry">
-       <rect>
-        <x>370</x>
-        <y>210</y>
-        <width>49</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>House</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="Tutorial">
-     <widget class="QLabel" name="label_22">
-      <property name="geometry">
-       <rect>
-        <x>350</x>
-        <y>220</y>
-        <width>49</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Tutorial</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="Game">
+    <widget class="QWidget" name="page_3"/>
+    <widget class="QWidget" name="page_2">
      <property name="enabled">
       <bool>true</bool>
      </property>
@@ -167,13 +135,26 @@ rgb(0, 0, 0)
         <property name="title">
          <string>Game Sim</string>
         </property>
+        <widget class="QLabel" name="label_18">
+         <property name="geometry">
+          <rect>
+           <x>290</x>
+           <y>20</y>
+           <width>431</width>
+           <height>61</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>TextLabel</string>
+         </property>
+        </widget>
         <widget class="QWidget" name="layoutWidget">
          <property name="geometry">
           <rect>
-           <x>10</x>
-           <y>40</y>
-           <width>301</width>
-           <height>306</height>
+           <x>0</x>
+           <y>20</y>
+           <width>288</width>
+           <height>296</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
@@ -1062,31 +1043,6 @@ rgb(0, 0, 0)
     border-radius: 5px;
     padding: 5px;
 }</string>
-<<<<<<< HEAD
-        </property>
-        <property name="text">
-         <string>G2</string>
-        </property>
-       </widget>
-      </item>
-      <item row="22" column="2">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>C</string>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="4">
-       <widget class="QPushButton" name="pushButton_52">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-=======
             </property>
             <property name="text">
              <string>F5</string>
@@ -1109,106 +1065,11 @@ rgb(0, 0, 0)
             </property>
             <property name="styleSheet">
              <string notr="true">QPushButton {
->>>>>>> 28865a95e70ed4d5c9954f0bffee3745c94aeddd
     background-color: #000000;
     color: white;
     border-radius: 5px;
     padding: 5px;
 }</string>
-<<<<<<< HEAD
-        </property>
-        <property name="text">
-         <string>E7</string>
-        </property>
-       </widget>
-      </item>
-      <item row="22" column="3">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>D</string>
-        </property>
-       </widget>
-      </item>
-      <item row="17" column="3">
-       <widget class="QPushButton" name="pushButton_39">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>30</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-}</string>
-        </property>
-        <property name="text">
-         <string>D2</string>
-        </property>
-       </widget>
-      </item>
-      <item row="14" column="0">
-       <widget class="QPushButton" name="pushButton_5">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-}</string>
-        </property>
-        <property name="text">
-         <string>A5</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="5">
-       <widget class="QPushButton" name="pushButton_63">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-}</string>
-        </property>
-        <property name="text">
-         <string>F8</string>
-        </property>
-       </widget>
-      </item>
-      <item row="16" column="7">
-       <widget class="QPushButton" name="pushButton_70">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-=======
             </property>
             <property name="text">
              <string>G5</string>
@@ -1231,44 +1092,11 @@ rgb(0, 0, 0)
             </property>
             <property name="styleSheet">
              <string notr="true">QPushButton {
->>>>>>> 28865a95e70ed4d5c9954f0bffee3745c94aeddd
     background-color: #FFFFFF;
     color: black;
     border-radius: 5px;
     padding: 5px;
 }</string>
-<<<<<<< HEAD
-        </property>
-        <property name="text">
-         <string>H3</string>
-        </property>
-       </widget>
-      </item>
-      <item row="22" column="0" alignment="">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>A</string>
-        </property>
-       </widget>
-      </item>
-      <item row="22" column="1">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>B</string>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="1">
-       <widget class="QPushButton" name="pushButton_11">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-=======
             </property>
             <property name="text">
              <string>H5</string>
@@ -1304,7 +1132,6 @@ rgb(0, 0, 0)
             </property>
             <property name="styleSheet">
              <string notr="true">QPushButton {
->>>>>>> 28865a95e70ed4d5c9954f0bffee3745c94aeddd
     background-color: #FFFFFF;
     color: black;
     border-radius: 5px;
@@ -1370,31 +1197,6 @@ rgb(0, 0, 0)
     border-radius: 5px;
     padding: 5px;
 }</string>
-<<<<<<< HEAD
-        </property>
-        <property name="text">
-         <string>C8</string>
-        </property>
-       </widget>
-      </item>
-      <item row="22" column="4">
-       <widget class="QLabel" name="label_6">
-        <property name="text">
-         <string>E</string>
-        </property>
-       </widget>
-      </item>
-      <item row="15" column="5">
-       <widget class="QPushButton" name="pushButton_58">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-=======
             </property>
             <property name="text">
              <string>C4</string>
@@ -1417,7 +1219,6 @@ rgb(0, 0, 0)
             </property>
             <property name="styleSheet">
              <string notr="true">QPushButton {
->>>>>>> 28865a95e70ed4d5c9954f0bffee3745c94aeddd
     background-color: #000000;
     color: white;
     border-radius: 5px;
@@ -1477,121 +1278,6 @@ rgb(0, 0, 0)
     border-radius: 5px;
     padding: 5px;
 }</string>
-<<<<<<< HEAD
-        </property>
-        <property name="text">
-         <string>D4</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1">
-       <widget class="QPushButton" name="pushButton_12">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-}</string>
-        </property>
-        <property name="text">
-         <string>B8</string>
-        </property>
-       </widget>
-      </item>
-      <item row="16" column="2">
-       <widget class="QPushButton" name="pushButton_41">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-}</string>
-        </property>
-        <property name="text">
-         <string>C3</string>
-        </property>
-       </widget>
-      </item>
-      <item row="17" column="5">
-       <widget class="QPushButton" name="pushButton_55">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>30</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-}</string>
-        </property>
-        <property name="text">
-         <string>F2</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="3">
-       <widget class="QPushButton" name="pushButton_47">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color: #000000;
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-}</string>
-        </property>
-        <property name="text">
-         <string>D8</string>
-        </property>
-       </widget>
-      </item>
-      <item row="22" column="6">
-       <widget class="QLabel" name="label_8">
-        <property name="text">
-         <string>G</string>
-        </property>
-       </widget>
-      </item>
-      <item row="13" column="4">
-       <widget class="QPushButton" name="pushButton_62">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-=======
             </property>
             <property name="text">
              <string>F4</string>
@@ -1614,7 +1300,6 @@ rgb(0, 0, 0)
             </property>
             <property name="styleSheet">
              <string notr="true">QPushButton {
->>>>>>> 28865a95e70ed4d5c9954f0bffee3745c94aeddd
     background-color: #FFFFFF;
     color: black;
     border-radius: 5px;
@@ -1834,80 +1519,6 @@ rgb(0, 0, 0)
     border-radius: 5px;
     padding: 5px;
 }</string>
-<<<<<<< HEAD
-        </property>
-        <property name="text">
-         <string>B3</string>
-        </property>
-       </widget>
-      </item>
-      <item row="13" column="6">
-       <widget class="QPushButton" name="pushButton_78">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color: #FFFFFF;
-    color: black;
-    border-radius: 5px;
-    padding: 5px;
-}</string>
-        </property>
-        <property name="text">
-         <string>G6</string>
-        </property>
-       </widget>
-      </item>
-      <item row="22" column="7">
-       <widget class="QLabel" name="label_9">
-        <property name="text">
-         <string>H</string>
-        </property>
-       </widget>
-      </item>
-      <item row="22" column="5">
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>F</string>
-        </property>
-       </widget>
-      </item>
-      <item row="16" column="5">
-       <widget class="QPushButton" name="pushButton_54">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color: #FFFFFF;
-    color: black;
-    border-radius: 5px;
-    padding: 5px;
-}</string>
-        </property>
-        <property name="text">
-         <string>F3</string>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="6">
-       <widget class="QPushButton" name="pushButton_68">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>30</horstretch>
-          <verstretch>30</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-=======
             </property>
             <property name="text">
              <string>F3</string>
@@ -1930,7 +1541,6 @@ rgb(0, 0, 0)
             </property>
             <property name="styleSheet">
              <string notr="true">QPushButton {
->>>>>>> 28865a95e70ed4d5c9954f0bffee3745c94aeddd
     background-color: #000000;
     color: white;
     border-radius: 5px;
@@ -2642,79 +2252,9 @@ rgb(0, 0, 0)
           </item>
          </layout>
         </widget>
-        <widget class="QTableWidget" name="tableWidget">
-         <property name="geometry">
-          <rect>
-           <x>380</x>
-           <y>40</y>
-           <width>251</width>
-           <height>311</height>
-          </rect>
-         </property>
-         <row>
-          <property name="text">
-           <string>Turn #</string>
-          </property>
-         </row>
-         <column>
-          <property name="text">
-           <string>P1</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>P2</string>
-          </property>
-         </column>
-        </widget>
        </widget>
       </item>
      </layout>
-    </widget>
-    <widget class="QWidget" name="Settings">
-     <widget class="QLabel" name="label_21">
-      <property name="geometry">
-       <rect>
-        <x>320</x>
-        <y>200</y>
-        <width>49</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Settings</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="About">
-     <widget class="QLabel" name="label_18">
-      <property name="geometry">
-       <rect>
-        <x>340</x>
-        <y>230</y>
-        <width>49</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>About</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="End">
-     <widget class="QLabel" name="label_19">
-      <property name="geometry">
-       <rect>
-        <x>330</x>
-        <y>280</y>
-        <width>49</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>End</string>
-      </property>
-     </widget>
     </widget>
    </widget>
   </widget>
